1. Implemented note interface and added notes array in user class 2. Imported angular material module 2. USed mat expansion and mat card module for creation of add new note and note listing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,16 @@
 <!-- nav -->
-<nav class="navbar navbar-expand navbar-dark bg-dark" *ngIf="user">
-  <div class="navbar-nav">
-      <a class="nav-item nav-link" (click)="logout()">Logout</a>
+<nav class="navbar navbar-expand-lg navbar-light bg-light" *ngIf="user">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Keep</a>
+  
+    <div class="collapse navbar-collapse right" id="navbarText">
+      <span class="navbar-text">
+        Hi {{user.firstName}}
+      </span>
+      <span class="navbar-nav">
+        <a class="nav-item nav-link" (click)="logout()">Logout</a>
+      </span>
+    </div>
   </div>
 </nav>
 
