--- a/src/styles.css
+++ b/src/styles.css
@@ -26,3 +26,15 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     width: 50%;
     padding: 10px;
   }
+  .content {
+    padding: 16px;
+}
+
+.content > mat-card {
+    width: 100%;
+}
+
+.break-word 
+{
+  word-wrap: break-word;
+}
