--- a/src/app/note-create/note-create.component.html
+++ b/src/app/note-create/note-create.component.html
@@ -1,37 +1,33 @@
 <div class="container">
   <div class="row center">
-    <mat-expansion-panel>
+    <mat-expansion-panel [hideToggle]="true">
       <mat-expansion-panel-header>
-          <mat-panel-title>
-              Take a note...
-          </mat-panel-title>
+        <mat-panel-title>
+          Take a note...
+        </mat-panel-title>
       </mat-expansion-panel-header>
-    
+
       <form (ngSubmit)="onSubmit()">
-        <h3>Create a note</h3>
+        <img mat-card-image *ngIf="noteImageSrc" [src]="noteImageSrc" style="height: 300px; width:500px">
         <mat-card-content>
           <mat-form-field class="form-field">
-            <input 
-              matInput
-              placeholder="Note title"
-              [(ngModel)]="noteTitle"
-              name="noteTitle"
-            >
+            <input matInput placeholder="Note title" [(ngModel)]="noteTitle" name="noteTitle">
           </mat-form-field>
           <mat-form-field class="form-field">
-            <textarea 
-              matInput
-              placeholder="Note description"
-              [(ngModel)]="noteDescription"
-              name="noteDescription"
-            ></textarea>
+            <textarea matInput placeholder="Note description" [(ngModel)]="noteDescription"
+              name="noteDescription"></textarea>
+            <input style="display: none" type="file" (change)="onFileChanged($event)" #fileInput>
           </mat-form-field>
         </mat-card-content>
+        <mat-card-actions class="edit-actions">
+          <button *ngIf="!noteImageSrc" (click)="fileInput.click()">Image</button>
+          <button mat-stroked-button color="primary" *ngIf="noteImageSrc" (click)="noteImageSrc = ''">Remove Image</button>
+        </mat-card-actions>
         <mat-card-actions class="edit-actions">
           <button type="submit" mat-raised-button color="primary">Create</button>
         </mat-card-actions>
       </form>
-    
+
     </mat-expansion-panel>
   </div>
 </div>
