--- a/src/app/note-edit/note-edit.component.html
+++ b/src/app/note-edit/note-edit.component.html
@@ -3,6 +3,7 @@
   <button mat-mini-fab color="primary" class="delete-button" (click)="delete()">
     <mat-icon>delete_forever</mat-icon>
   </button>
+  <img mat-card-image class="center" *ngIf="note.image" [src]="note.image" style="height: 300px; width:500px">
   <mat-card-content>
     <mat-form-field class="note-edit-input">
       <input matInput placeholder="Title" [(ngModel)]="note.title" >
@@ -10,7 +11,12 @@
     <mat-form-field class="note-edit-input">
       <input matInput placeholder="Description" [(ngModel)]="note.description" >
     </mat-form-field>
+    <input style="display: none" type="file" (change)="onFileChanged($event)" #fileInput>
   </mat-card-content>
+  <mat-card-actions class="note-actions">
+    <button *ngIf="!note.image" (click)="fileInput.click()">Image</button>
+    <button mat-stroked-button color="primary" *ngIf="note.image" (click)="note.image = ''">Remove Image</button>
+  </mat-card-actions>
   <mat-card-actions class="note-actions">
     <button mat-stroked-button color="primary" (click)="save()">Save</button>
   </mat-card-actions>
