--- a/src/app/note/note.component.html
+++ b/src/app/note/note.component.html
@@ -1,18 +1,17 @@
-<mat-card class="note"> 
-  <button 
-    mat-mini-fab
-    color="primary" 
-    class="delete-button"
-    (click)="onDelete()"
-  >
-    X
-  </button>
-  <div (click)="toEditPage()">
-    <mat-card-header class="note-header">
+<div class="content">
+  <mat-card class="mat-elevation-z4">
+    <mat-card-header>
       <mat-card-title>{{ note.title }}</mat-card-title>
     </mat-card-header>
-    <mat-card-content class="note-content">
-      {{ note.description }}
+    <img mat-card-image *ngIf="note.image" [src]="note.image">
+    <mat-card-content>
+      <p class="break-word">
+        {{ note.description }}
+      </p>
     </mat-card-content>
-  </div>
-</mat-card>
+    <mat-card-actions>
+      <button mat-button (click)="toEditPage()" >EDIT</button>
+      <button mat-button  (click)="onDelete()">DELETE</button>
+    </mat-card-actions>
+  </mat-card>
+</div>
