--- a/src/app/note/note.component.html
+++ b/src/app/note/note.component.html
@@ -1,17 +1,39 @@
 <div class="content">
   <mat-card class="mat-elevation-z4">
-    <mat-card-header>
-      <mat-card-title>{{ note.title }}</mat-card-title>
-    </mat-card-header>
-    <img mat-card-image *ngIf="note.image" [src]="note.image">
-    <mat-card-content>
-      <p class="break-word">
-        {{ note.description }}
-      </p>
-    </mat-card-content>
-    <mat-card-actions>
-      <button mat-button (click)="toEditPage()" >EDIT</button>
-      <button mat-button  (click)="onDelete()">DELETE</button>
-    </mat-card-actions>
+    <ng-container *ngIf="!isListMode">
+      <img mat-card-image *ngIf="note.image" [src]="note.image">
+      <mat-card-header>
+        <mat-card-title><span class="break-word">{{ note.title }}</span></mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <p [innerHTML]="note.description  | linkify" class="break-word">
+        </p>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button (click)="toEditPage()">EDIT</button>
+        <button mat-button (click)="onDelete()">DELETE</button>
+      </mat-card-actions>
+    </ng-container>
+    <ng-container *ngIf="isListMode">
+      <section>
+        <mat-card-header>
+          <mat-card-title><span class="break-word">{{ note.title }}</span></mat-card-title>
+        </mat-card-header>
+        <section class="main" *ngIf="note.list.length > 0">
+          <ul>
+            <li *ngFor="let todo of note.list" >
+              <div class="view">
+                <label [class.complete]="todo.complete">{{todo.title}}</label>
+              </div>
+            </li>
+          </ul>
+          <footer>
+            <button mat-button (click)="toEditPage()">EDIT</button>
+            <button mat-button (click)="onDelete()">DELETE</button>
+          </footer>
+        </section>
+      </section>
+    </ng-container>
+
   </mat-card>
 </div>
